src/objects/OrderWeekly__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OrdersWeekly</relationshipLabel>
        <relationshipName>OrdersWeekly</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>OrdersWeekly</relationshipLabel>
        <relationshipName>OrdersWeekly</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>OrderWeekly</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>OrderWeekly Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrdersWeekly</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>